# artemis

./: CMakeLists.txt  GNUmakefile  README.md  run_test.sh
.github/workflows/: cuda.yml  hip.yml  insitu.yml  intel.yml  macos.yml  source.yml  ubuntu.yml  windows.yml
.github/workflows/source/: inputsNotTested
Docs/: Doxyfile
Docs/source/: conf.py  index.rst
Docs/source/building/: building.rst  cmake.rst
Examples/Waveguide/: inputs_3d_LLG_filter  inputs_3d_LLG_filter_restarttest  inputs_3d_empty_X_band  inputs_3d_filter  inputs_regression_3d_filter
Regression/: WarpX-GPU-tests.ini  WarpX-tests.ini
Source/: Make.WarpX  WarpX.H  WarpX.cpp
Source/BoundaryConditions/: PML.H  PML.cpp  WarpXEvolvePML.cpp  WarpX_PEC.H
Source/Diagnostics/: Diagnostics.cpp  FullDiagnostics.cpp  WarpXIO.cpp  WarpXOpenPMD.cpp
Source/Evolve/: WarpXEvolve.cpp
Source/FieldSolver/: CMakeLists.txt  Make.package  WarpXExternalEMFields.cpp  WarpXPushFieldsEM.cpp
Source/FieldSolver/FiniteDifferenceSolver/: CMakeLists.txt  EvolveBLondon.cpp  EvolveEPML.cpp  EvolveHPML.cpp  EvolveM.cpp  FiniteDifferenceSolver.H  MacroscopicEvolveE.cpp  MacroscopicEvolveEPML.cpp  MacroscopicEvolveHM.cpp  MacroscopicEvolveHM_2nd.cpp  MacroscopicEvolveM.cpp  MacroscopicEvolveM_2nd.cpp  Make.package
Source/FieldSolver/FiniteDifferenceSolver/FiniteDifferenceAlgorithms/: CartesianYeeAlgorithm.H
Source/FieldSolver/FiniteDifferenceSolver/MacroscopicProperties/: MacroscopicProperties.H  MacroscopicProperties.cpp
Source/FieldSolver/London/: CMakeLists.txt  London.H  London.cpp  Make.package
Source/FieldSolver/SpectralSolver/SpectralAlgorithms/: PsatdAlgorithmRZ.cpp
Source/Initialization/: WarpXInitData.cpp
Source/Parallelization/: GuardCellManager.cpp  WarpXComm.cpp
Source/Particles/: WarpXParticleContainer.cpp
Source/Python/: WarpXWrappers.cpp
Source/Utils/: WarpXAlgorithmSelection.H  WarpXAlgorithmSelection.cpp  WarpXUtil.H
Tools/ExcitationFlagGenerator/: Excitation_Flag_Generator.py  README.txt  exampledata_Excitation_Flag_Generator.txt  inputs_3d_circuit_sample
Tools/PostProcessing/: circuit_fft.ipynb
cmake/: WarpXFunctions.cmake
cmake/dependencies/: AMReX.cmake
(+110 files in other folders)
