target_sources(WarpX
  PRIVATE
    ComputeDivE.cpp
    EvolveB.cpp
    EvolveBPML.cpp
    EvolveE.cpp
    EvolveEPML.cpp
    EvolveF.cpp
    EvolveFPML.cpp
    FiniteDifferenceSolver.cpp
    MacroscopicEvolveE.cpp
)

if(WarpX_LLG_MAG)
    target_sources(WarpX
      PRIVATE
        MacroscopicEvolveHM_2nd.cpp
        MacroscopicEvolveHM.cpp
        MacroscopicEvolveM_2nd.cpp
        MacroscopicEvolveM.cpp
    )
endif()
add_subdirectory(MacroscopicProperties)
