target_sources(WarpX
  PRIVATE
    ComputeDivE.cpp
    EvolveB.cpp
    EvolveBPML.cpp
    EvolveE.cpp
    EvolveEPML.cpp
    EvolveF.cpp
    EvolveFPML.cpp
    EvolveG.cpp
    FiniteDifferenceSolver.cpp
    MacroscopicEvolveE.cpp
    MacroscopicEvolveEPML.cpp
    ApplySilverMuellerBoundary.cpp
)

if(WarpX_MAG_LLG)
    target_sources(WarpX
      PRIVATE
        MacroscopicEvolveHM_2nd.cpp
        MacroscopicEvolveHM.cpp
        MacroscopicEvolveM_2nd.cpp
        MacroscopicEvolveM.cpp
        EvolveHPML.cpp
    )
endif()
add_subdirectory(MacroscopicProperties)
